@@ -27,6 +27,7 @@ ChangeLog
 [-] * Added ID for Nokia 1112.
 [-] * Dropped obsolete packaging/debian and point users to proper packages.
 [-] * Fix crash when operator logo is empty.
+[-] * Fix memory leak in SMS backup.
     
 20090116 - 1.22.91
 
